# AUSRA-Autonomous-System

./: IMU_Integration_README.md  README.md  ausra_agent_prompt.md  ausra_view.rviz  fastdds_localhost.xml  jetson_exploration.md  jetson_ros_env.sh  microros_agent_domain42.xml  start__drivers_for_tune_ekf.sh  start_micro_ros_agent.sh
Control/dwb_core/src/: dwb_local_planner.cpp
Docs/: ausra_global_explorer_docs.md  sim_agent_prompt.md
Docs/Merge/: Readme.md
Docs/Merge/problems_and _solutions/: architectural_review.md  problems.md
Docs/TF understand/: Frames_explain.md  tf_architecture_explanation.md
Localization/ausra_localization/: CMakeLists.txt  package.xml
Localization/ausra_localization/config/: ekf.yaml  imu_complimentary_filter.yaml  speckle_filter.yaml
Localization/ausra_localization/launch/: localization.launch.py
Navigation/ausra_frontier_exploration/: CMakeLists.txt  package.xml
Navigation/ausra_frontier_exploration/config/: explore_params.yaml
Navigation/ausra_frontier_exploration/include/ausra_frontier_exploration/: frontier_search.hpp
Navigation/ausra_frontier_exploration/launch/: exploration.launch.py  integrated_exploration.launch.py
Navigation/ausra_frontier_exploration/src/: exploration_server.cpp  exploration_server_enhanced.cpp  frontier_search.cpp
Navigation/ausra_global_explorer/: package.xml  setup.cfg  setup.py
Navigation/ausra_global_explorer/ausra_global_explorer/: frontier_coordinator.py  robot_obstacle_publisher.py
Navigation/ausra_global_explorer/config/: coordinator_params.yaml
Navigation/ausra_global_explorer/launch/: global_frontier.launch.py
Navigation/nav2_bringup/launch/: navigation_launch.py
Navigation/nav2_bringup/params/: nav2_ausra_multirobot.yaml
Perception/: .gitignore  requirements.txt
Perception/config/: args.yaml  data.yaml
Perception/results/: combined_results_1_to_50.csv  results-epoch-1-38.csv  results-epochs-39-50.csv
Perception/src/: run_robot_vision.py  test_inference.py  yolo_export.py  yolo_inference_speed.py  yolo_val.py
Perception/src/ausra_yolo/: package.xml  setup.cfg  setup.py
SLAM/RPLidar_Drive/: teps.md
SLAM/cartographer_robot/: CMakeLists.txt  package.xml
SLAM/cartographer_robot/config/: Robot.lua  Robot_w_IMU.lua
SLAM/cartographer_robot/launch/: my_robot_cartographer.py
SLAM/maps/: my_map1.pgm  my_map1.yaml
SLAM/slam_explorer/: package.xml  setup.cfg  setup.py
SLAM/slam_explorer/config/: ekf.yaml  explore.yaml  imu_complimentary_filter.yaml  map_saver_params.yaml  nav2_params.yaml  slam_omni_single_robot.yaml  speckle_filter.yaml
SLAM/slam_explorer/launch/: auto_explore.launch.py
SLAM/slam_explorer/slam_explorer/: explorer.py  explorer_mod.py  frontier_explore.py  history_explorer.py  map_saver.py
ausra_bringup/: CMakeLists.txt  package.xml  requirements.txt
ausra_bringup/launch/: hardware_full_stack.launch.py
ausra_bringup/scripts/: gen_zenoh_config.sh  install_jetson.sh  ns_resolver.py  send_namespace_to_esp32.sh  start_micro_ros.sh
ausra_bringup/systemd/: ausra-micro-ros.service  ausra-ns-resolver.service  ausra-ros-stack.service  ausra-supervisor.service  ausra-zenoh-bridge.service
ausra_bringup/zenoh/: laptop_bridge.json5  robot_bridge.json5
ausra_comms/ausra_comms/: fake_robot_pub.py  relay_node.py
ausra_comms/config/: zenoh_bridge_jetson.json5
ausra_comms/docs/: LAPTOP_JETSON_TEST_GUIDE.md
ausra_comms/launch/: hardware_with_comms.launch.py
ausra_comms/scripts/: start_base_2robots.sh  start_comms_2robots.sh
ausra_map_merge/: CMakeLists.txt  package.xml
ausra_map_merge/config/: map_merge_params.yaml
ausra_map_merge/docs/Hardware/: AGENT_PROMPT_hw_deployment_review.md  Alternative_Hardware_Strategies.md  Missing_Hardware_Strategy_Evaluation.md  gemini_aruco_approuch.md
ausra_map_merge/launch/: map_merge.launch.py
ausra_map_merge/src/: map_expansion_node.cpp
ausra_map_merge_HW/config/: map_merge_HW_params.yaml
ausra_map_merge_HW/launch/: map_merge_hw.launch.py
ausra_movement_demo/: package.xml  setup.cfg  setup.py
ausra_movement_demo/ausra_movement_demo/: holonomic_movement_demo.py
ausra_movement_demo/launch/: holonomic_demo.launch.py
ausra_msgs/: CMakeLists.txt  package.xml
ausra_msgs/action/: SendTask.action
ausra_msgs/msg/: FleetStatus.msg  RobotStatus.msg
ausra_numpad_teleop/: package.xml  setup.cfg  setup.py
ausra_numpad_teleop/ausra_numpad_teleop/: numpad_teleop_node.py
ausra_numpad_teleop/launch/: numpad_teleop.launch.py
ausra_spawner/: README.md  package.xml  setup.cfg  setup.py
ausra_spawner/ausra_spawner/: __init__.py  fleet_comm_node.py
ausra_spawner/config/: default_controller.yaml  ekf_multirobot.yaml  exploration.yaml  exploration_multirobot.yaml  imu_filter.yaml  nav2_multirobot.yaml  nav2_params.yaml  omni_driver.yaml  slam_multirobot.yaml  slam_toolbox.yaml
ausra_spawner/launch/: debug_tf.launch.py  fleet_comm.launch.py  robot_bringup.launch.py  robot_nav2_test.launch.py  rviz_multirobot.launch.py  simple_robot_test.launch.py  spawn_ausra.launch.py  spawn_ausra_full.launch.py  visualization.launch.py
ausra_spawner/maps/: README.md
ausra_spawner/rviz/: exploration_visualization.rviz  multirobot_nav.rviz  single_robot_exploration.rviz  tf_debug.rviz
ausra_supervisor/: package.xml  setup.cfg  setup.py
ausra_supervisor/ausra_supervisor/: __init__.py  supervisor_node.py  topic_watchdog.py
hardware/arduino/mpu9250_esp32/: mpu9250_esp32.ino
lidar_slam_pkg/: package.xml  setup.py
lidar_slam_pkg/config/: explore_params.yaml  nav2_holonomic_params.yaml  nav2_params.yaml  slam_toolbox_config.yaml
lidar_slam_pkg/launch/: hardware_full_stack.launch.py  integrated_hardware_navigation.launch.py  minimal_slam_test.launch.py  slam.launch.py
lidar_slam_pkg/lidar_slam_pkg/: send_ns.py
merge/: ArUco_Pipeline_Integration_Steps_no_prefix.md
merge/plans/: AUSRA_Hardware_Architecture_Overview.md  Hardware_Baseline_Testing_Plan.md
src/imu_esp32_bridge/: package.xml  setup.cfg  setup.py
src/imu_esp32_bridge/config/: ekf.yaml
src/imu_esp32_bridge/launch/: imu_ekf_launch.py
(+16 files in other folders)
