<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ausra_map_merge</name>
  <version>0.1.0</version>
  <description>
    Map expansion relay node and launch configuration for integrating
    multirobot_map_merge with SLAM Toolbox in the AUSRA multi-robot swarm.
  </description>
  <maintainer email="mostafasmy020@gmail.com">mostafa</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>multirobot_map_merge</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
