<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ausra_spawner</name>
  <version>0.1.0</version>
  <description>Dynamic robot spawner for multi-robot AUSRA simulation</description>
  <maintainer email="abdelrhman048@gmail.com">abdelrhman</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>velocity_controllers</depend>
  <depend>omnidirectional_driver</depend>
  <depend>ausrabot_description</depend>
  <depend>nav2_common</depend>
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>
  <depend>robot_localization</depend>
  <depend>ausra_frontier_exploration</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_behaviors</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_velocity_smoother</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
