<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ausra_localization</name>
  <version>1.0.0</version>
  <description>Sensor fusion and state estimation for AUSRA robot</description>
  <maintainer email="ausra@example.com">AUSRA Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_localization</exec_depend>
  <exec_depend>imu_complementary_filter</exec_depend>
  <exec_depend>laser_filters</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
