<?xml version="1.0"?>
<package format="3">
  <name>ausra_global_explorer</name>
  <version>0.1.0</version>
  <description>Centralized multi-robot frontier coordinator for the AUSRA swarm</description>
  <maintainer email="ausra@team.local">AUSRA Team</maintainer>
  <license>BSD</license>
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>action_msgs</depend>
  <depend>visualization_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
